update: simplify R script