@@ -123,15 +123,9 @@ public class CurveFittingExecutorService {
         }
 
         var wellSubstances = wells.stream().filter(wellDTO -> wellDTO.getWellSubstance() != null).map(wellDTO -> wellDTO.getWellSubstance()).toList();
-        var wellSubstancesNames = wellSubstances.stream().map(ws -> ws.getName()).collect(Collectors.toList());
+        var wellSubstancesNames = wellSubstances.stream().map(ws -> ws.getName()).toList();
         logger.info("All wellSubstances found: " + wellSubstancesNames);
-        var wellSubstancesUnique = wellSubstances
-                .stream()
-                .map(WellSubstanceDTO::getName)
-                .toList()
-                .stream()
-                .distinct()
-                .toList();
+        var wellSubstancesUnique = wellSubstancesNames.stream().distinct().toList();
         logger.info("Number of unique substances for plate " + plate + " is " + wellSubstancesUnique.size());
 
         if (CollectionUtils.isEmpty(wellSubstancesUnique))
@@ -284,6 +278,7 @@ public class CurveFittingExecutorService {
 
         if (inputDTO.getDrcModel().isPresent()) {
             DRCModelDTO drcModel = inputDTO.getDrcModel().get();
+            logger.info("Input DRCModel: " + drcModel);
             inputVariables.put("fixedBottom", drcModel.getInputParameters().containsKey("fixedBottom") ? drcModel.getInputParameters().get("fixedBottom") : "NA");
             inputVariables.put("fixedTop", drcModel.getInputParameters().containsKey("fixedTop") ? drcModel.getInputParameters().get("fixedTop") : "NA");
             inputVariables.put("fixedSlope", drcModel.getInputParameters().containsKey("fixedSlope") ? drcModel.getInputParameters().get("fixedSlope") : "NA");
@@ -321,21 +316,21 @@ public class CurveFittingExecutorService {
                 "\tresponseName = responseName,\n" +
                 "\tslope = slopeType)\n" +
                 "\n" +
-                "output <- NULL\n" +
-                "output$pIC50toReport <- value$pIC50toReport\n" +
-                "output$validpIC50 <- value$validpIC50\n" +
-                "output$rangeResults$eMin <- value$rangeResults[c(\"eMin\"),]\n" +
-                "output$rangeResults$eMax <- value$rangeResults[c(\"eMax\"),]\n" +
-                "output$validpIC20 <- value$validpIC20[c(\"e:1:20\"),]\n" +
-                "output$validpIC80 <- value$validpIC80[c(\"e:1:80\"),]\n" +
-                "output$dataPredict2Plot <- value$dataPredict2Plot \n" +
-                "output$weights <- value$weights\n" +
-                "output$modelCoefs$Slope <- value$modelCoefs[c(\"Slope\"),]\n" +
-                "output$modelCoefs$Bottom <- value$modelCoefs[c(\"Bottom\"),]\n" +
-                "output$modelCoefs$Top <- value$modelCoefs[c(\"Top\"),]\n" +
-                "output$modelCoefs$negLog10ED50 <- value$modelCoefs[c(\"-log10ED50\"),]\n" +
-                "output$residulaVariance <- value$residulaVariance\n" +
-                "output$warningFit <- value$warningFit\n";
+                "output <- value\n";
+//                "output$pIC50toReport <- value$pIC50toReport\n" +
+//                "output$validpIC50 <- value$validpIC50\n" +
+//                "output$rangeResults$eMin <- value$rangeResults[c(\"eMin\"),]\n" +
+//                "output$rangeResults$eMax <- value$rangeResults[c(\"eMax\"),]\n" +
+//                "output$validpIC20 <- value$validpIC20[c(\"e:1:20\"),]\n" +
+//                "output$validpIC80 <- value$validpIC80[c(\"e:1:80\"),]\n" +
+//                "output$dataPredict2Plot <- value$dataPredict2Plot \n" +
+//                "output$weights <- value$weights\n" +
+//                "output$modelCoefs$Slope <- value$modelCoefs[c(\"Slope\"),]\n" +
+//                "output$modelCoefs$Bottom <- value$modelCoefs[c(\"Bottom\"),]\n" +
+//                "output$modelCoefs$Top <- value$modelCoefs[c(\"Top\"),]\n" +
+//                "output$modelCoefs$negLog10ED50 <- value$modelCoefs[c(\"-log10ED50\"),]\n" +
+//                "output$residulaVariance <- value$residulaVariance\n" +
+//                "output$warningFit <- value$warningFit\n";
                 // TODO: Later include pIC50Location value(s)
                 // "output$pIC50Location <- value$pIC50Location[1]\n" +
                 // "output$pIC50LocationPrediction <- value$pIC50Location[2]\n" +
